2015-03-29  Mike Frysinger  <vapier@gentoo.org>

	* configure.ac: Call SIM_AC_OPTION_ENDIAN, SIM_AC_OPTION_ALIGNMENT,
	SIM_AC_OPTION_HOSTENDIAN, SIM_AC_OPTION_ENVIRONMENT, and
	SIM_AC_OPTION_INLINE.
	* config.in, configure: Regenerate.

2015-03-16  Mike Frysinger  <vapier@gentoo.org>

	* interp.c: Strip trailing whitespace.

2015-03-16  Mike Frysinger  <vapier@gentoo.org>

	* configure.ac: Call SIM_AC_OPTION_WARNINGS.
	* confingure: Regenerate.
	* interp.c: Include run-sim.h.
	(microblaze_extract_unsigned_integer): Mark static.
	(microblaze_store_unsigned_integer): Likewise.
	(int_sbrk, SEXTB, SEXTW, IOMEM): Delete.
	(init_pointers, set_initial_gprs): Add (void) to prototype.
	(opened, log_open, log_close, is_opened, handle_trap1, process_stub,
	util, iu_carry): Delete.

2015-03-16  Mike Frysinger  <vapier@gentoo.org>

	* config.in, configure: Regenerate.

2015-03-14  Mike Frysinger  <vapier@gentoo.org>

	* Makefile.in (SIM_EXTRA_CFLAGS): Set to
	-DSIM_USE_DEPRECATED_RUN_FRONTEND.
	(SIM_RUN_OBJS): Set to run.o.
	(SIM_EXTRA_CLEAN): Delete.
	(interp.o, microblaze-clean): Delete rules.

2015-03-14  Mike Frysinger  <vapier@gentoo.org>

	* configure.ac (AC_CHECK_HEADERS): Delete.
	* aclocal.m4, configure: Regenerate.

2015-03-08  Mike Frysinger  <vapier@gentoo.org>

	* interp.c (microblaze_extract_unsigned_integer): Change %ld to %zu.

2015-02-20  Mike Frysinger  <vapier@gentoo.org>

	* interp.c: Delete sysdep.h and netinet/in.h includes.
	Include stdlib.h and string.h and unistd.h.
	* sysdep.h: Delete.

2015-02-19  Mike Frysinger  <vapier@gentoo.org>

	* interp.c (sim_kill): Delete unused func.

2015-02-19  Mike Frysinger  <vapier@gentoo.org>

	* microblaze.isa: Add "microblaze_" prefix to "or", "and", and "xor".

2015-02-02  Chen Gang  <gang.chen.5i5j@gmail.com>

	* interp.c (sim_do_command): Call freeargv() before return.

2014-07-01  Chen Gang  <gang.chen.5i5j@gmail.com>

	* interp.c: Use long int format instead of int format.
