@@ -1,5 +1,9 @@
 2015-03-29  Mike Frysinger  <vapier@gentoo.org>
 
+	* interp.c (sim_load): Set verbose to 0 when calling sim_load_file.
+
+2015-03-29  Mike Frysinger  <vapier@gentoo.org>
+
 	* configure.ac: Call SIM_AC_OPTION_ENDIAN, SIM_AC_OPTION_ALIGNMENT,
 	SIM_AC_OPTION_HOSTENDIAN, SIM_AC_OPTION_ENVIRONMENT, and
 	SIM_AC_OPTION_INLINE.
